# team-lead-github-metrics

./: .gitignore  README.md  main.py  pyproject.toml  query_iteration.py  query_iteration.sh  run_metrics.py  run_metrics.sh
iterations/: iteration_20.md  iteration_21.md  iteration_22.md  iteration_23.md  iteration_24.md
metrics/: __init__.py  blocker_metrics.py  generate_summary.py  issue_metrics.py  issue_velocity_metrics.py  main.py  pr_metrics.py  pr_review_metrics.py  report.py  rollover_metrics.py
temp/iteration_25/: Iteration_25.html  Iteration_25.md
temp/iteration_26/: Iteration_26.html  Iteration_26.md
